mypod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: testing
  name: testing
spec:
  containers:
  - image: busybox
    name: testing
    command: ['sh','-c','echo hello']
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: OnFailure 
status: {}
