jira-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: jira
  name: jira
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: jira
  type: LoadBalancer
