pod-svc.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: diagnose
  name: diagnose
spec:
  containers:
  - image: yukuansong/diagnoseme:latest
    name: diagnose
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: diagnose 
  name: diagnose 
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: diagnose 
  type: LoadBalancer
